--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,18 @@
-[package]
-name = "rust-arduino-blink"
-version = "0.1.0"
-authors = ["Dietrich <dietrich@teilgedanken.de>"]
-edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package]
+name = "arduino-nano-examples"
+version = "0.0.0"
+authors = ["David R. Morrison <drmorr@evokewonder.com>"]
+edition = "2018"
+publish = false
 
 [dependencies]
-# A panic handler is needed.  This is a crate with the most basic one.
 panic-halt = "0.2.0"
+ufmt = "0.1.0"
+nb = "0.1.2"
+embedded-hal = "0.2.3"
 
-[dependencies.nano168]
+[dependencies.arduino-hal]
 git = "https://github.com/Rahix/avr-hal.git"
 rev = "e72faada6bb7f67990216525aeb2132bbb3d53e9"
 features = ["nano168"]
